    - Bump prereq IPC::Shareable to 1.08 due to a fix in creating random SHM
      keys in forked environments, major improvements of its _shm_key_rand()
      function, and its ability to set a 'protected' option so our global shared
      %events hash doesn't get cleaned up automatically
    - Modified examples/shared.pl so it doen't leak segments and semaphores
      after completion

1.08    2022-03-03
    - Added pid(), getter-only wrapper for _pid()
    - Added example of using shared data with IPC::Shareable

1.07    2022-03-03
    - interval() no longer requires stop/start of event to take effect
    - Re-arranged initialization routine to allow for the above
    - Interval is now stored in the %events shared hash so that the event can
      access it directly

1.06    2022-03-03
    - Class level hash that contains information about all existing events
      now lives in shared memory so we can track operation informtion from
      within the events themselves
    - Added runs() method, tracks the number of callback executions of an
      event
    - Added errors() method, tracks the number of times a callback fails
    - Added error_message() method, stores the most recent error message
      from the callback if an error has been logged
    - Modified _shm_rand_key() to return a 12-char ALPHA string
    - Updated tests to ensure they destroy any shared memory segments they
      create

1.05    2022-03-01
    - We now wait interval time before executing the event for the first time
    - Added error(), returns error status instead of using status() == -1
    - status() no longer sets -1. We now use error() for that

1.04    2021-05-11
    - Fix issue in t/45-params.t where done_testing() may have been called
      multiple times (fixes #5)
    - Fix issue where _rand_shm_key() could generate non-unique shared memory
      segment keys (fixes #4)

1.03    2021-05-05
    - Added events() class function, returns hash reference details of each