@@ -1,7 +1,8 @@
-#!perl -T
 use 5.006;
 use strict;
 use warnings;
+
+use IPC::Shareable;
 use Test::More;
 
 plan tests => 1;
@@ -11,3 +12,15 @@ BEGIN {
 }
 
 diag( "Testing Async::Event::Interval $Async::Event::Interval::VERSION, Perl $], $^X" );
+
+my $segs = IPC::Shareable::ipcs();
+
+print "Starting with $segs segments\n";
+
+# Store existing segments in a shared hash to test against
+# at conclusion of test suite run
+
+tie my %store, 'IPC::Shareable', {key => 'async_tests', create => 1};
+
+$store{segs} = $segs;
+
