@@ -7,6 +7,11 @@ Revision history for Async-Event-Interval
       %events hash doesn't get cleaned up automatically
     - Modified examples/shared.pl so it doen't leak segments and semaphores
       after completion
+    - We now remove %events hash in END instead of DESTROY. This way we can have
+      objects go out of scope in a script without blowing away the global shared
+      data
+    - Added end() so that we can test the END block in unit tests. END{} calls
+      end() upon program termination
 
 1.08    2022-03-03
     - Added pid(), getter-only wrapper for _pid()
